# Physicality

./: build.gradle.kts  gradle.properties  settings.gradle.kts
rust/: Cargo.toml  buid.gradle.kts
rust/jni-headers/: net_sorenon_physicality_physics_lib_jni_PhysJNI.h  net_sorenon_physicality_physv2_PhysJNI.h
rust/mc-phys/: Cargo.toml
rust/mc-phys-jni/: Cargo.toml
rust/mc-phys-jni/src/: debug_render.rs  lib.rs  physics.rs  safe.rs
src/main/java/net/sorenon/physicality/: Debris.java  EntityModelParser.java  EntityPart.java  PhysicalityMod.java  PhysicalityModClient.java  RagdollPart.java  UnbakedModel.java
src/main/java/net/sorenon/physicality/mesh/: ConvexHull.java  TriMesh.java
src/main/java/net/sorenon/physicality/mixin/client/: AgeableListModelAcc.java  ClientLevelMixin.java  GameRendererMixin.java  LevelMixin.java  LivingEntityRendererAcc.java  ModelPartAcc.java
src/main/java/net/sorenon/physicality/physics_lib/: BlockShapeManager.java  DebugRenderer.java  NativeLoader.java  PhysicsLib.java  PhysicsWorld.java  RapierPhysicsWorld.java  StepCallback.java
src/main/java/net/sorenon/physicality/physics_lib/jni/: DebugRenderCallback.java  NativeLoader.java  PhysJNI.java  PhysicsCallback.java
src/main/java/net/sorenon/physicality/physv2/: PhysJNI.java  PhysicsCallback.java  PhysicsCallbackImpl.java  PhysicsWorld2.java  RapierPhysicsWorld.java
src/main/resources/: fabric.mod.json  modid.mixins.json
src/test/java/net/sorenon/physicality/: SlicingTesting.java  VoronoiTesting.java
