[package]
name = "mc-phys-jni"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.19"
rapier3d = { version = "0.14", features = [ "debug-render" ] }
once_cell = "1.13"
parking_lot = "0.12"
thunderdome = "0.5"
glow = "0.11"

[profile.release]
codegen-units = 1

[profile.dev.package.rapier3d]
opt-level = 3